--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: Welcome to Starlight
+title: Welcome to the OONI documentation
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Learn how to use software components of the OONIverse
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/Icon-Color.svg
   actions:
     - text: Example Guide
       link: /guides/example/
