--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,8 +7,8 @@ hero:
   image:
     file: ../../assets/Icon-Color.svg
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Backend Docs
+      link: /backend
       icon: right-arrow
       variant: primary
     - text: Read the Starlight docs
