--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,30 @@
 ---
-title: Welcome to the OONI documentation
-description: Get started building your docs site with Starlight.
+title: Welcome to the OONI Developer docs
+description: OONI Developer Documentation
 template: splash
 hero:
-  tagline: Learn how to use software components of the OONIverse
+  tagline: Jump into the developer OONIverse
   image:
     file: ../../assets/Icon-Color.svg
   actions:
-    - text: Backend Docs
-      link: /backend
+    - text: Docs Documentation
+      link: /meta
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: OONI website
+      link: https://ooni.org
       icon: external
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Sections
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+	<Card title="Devops" icon="rocket">
+        Learn about [devops at ooni](/devops)
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="Backend" icon="puzzle">
+        Learn about [backend components](/backend)
 	</Card>
 </CardGrid>
