Improvements to docs page, add ooni theme

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,8 +7,8 @@ hero:
   image:
     file: ../../assets/Icon-Color.svg
   actions:
-    - text: Docs Documentation
-      link: /meta
+    - text: Accessing OONI Data
+      link: /data
       icon: right-arrow
       variant: primary
     - text: OONI website
@@ -26,5 +26,8 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	</Card>
 	<Card title="Backend" icon="puzzle">
         Learn about [backend components](/backend)
+	</Card>
+	<Card title="Meta" icon="puzzle">
+        Learn about [writing about documentation process](/meta)
 	</Card>
 </CardGrid>
