Add Probe App to the sidebar. Update index sections.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -21,13 +21,22 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## Sections
 
 <CardGrid stagger>
-	<Card title="Devops" icon="rocket">
+    <Card title="Devops" icon="rocket">
         Learn about [devops at ooni](/devops)
-	</Card>
-	<Card title="Backend" icon="puzzle">
+    </Card>
+    <Card title="Backend" icon="laptop">
         Learn about [backend components](/backend)
-	</Card>
-	<Card title="Meta" icon="puzzle">
+    </Card>
+    <Card title="Probe Engine" icon="puzzle">
+        Learn about [Probe Engine](/probe-engine)
+    </Card>
+    <Card title="Probe App" icon="star">
+        Learn about [Probe Multiplatform App](/probe-multiplatform)
+    </Card>
+    <Card title="APIs" icon="forward-slash">
+        Reference for the [Run API](/api-oonirun) and [Findings API](/api-oonifindings)
+    </Card>
+    <Card title="Meta" icon="document">
         Learn about [writing about documentation process](/meta)
-	</Card>
+    </Card>
 </CardGrid>
